[gd_scene load_steps=4 format=3 uid="uid://gvcxux74ogsh"]

[ext_resource type="Texture2D" uid="uid://cv4avs6qj7t1d" path="res://assets/png/close.png" id="1_c6gdr"]
[ext_resource type="Script" path="res://scripts/snapshot.gd" id="1_ynkak"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_7l13d"]
size = Vector2(300, 300)

[node name="Snapshot" type="Node2D"]
script = ExtResource("1_ynkak")

[node name="SnapshotImage" type="Sprite2D" parent="."]
position = Vector2(150, 150)
texture = SubResource("PlaceholderTexture2D_7l13d")

[node name="CloseButton" type="TextureButton" parent="."]
offset_left = 246.0
offset_top = 14.0
offset_right = 297.0
offset_bottom = 62.0
texture_normal = ExtResource("1_c6gdr")
texture_pressed = ExtResource("1_c6gdr")
texture_hover = ExtResource("1_c6gdr")

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
